--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "format": "biome format --write",
     "db:generate": "prisma generate --no-engine",
     "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio"
+    "db:studio": "prisma studio",
+    "db:push": "prisma db push"
   },
   "dependencies": {
     "@dnd-kit/core": "^6.3.1",
@@ -40,7 +41,10 @@
     "@react-email/components": "^0.5.3",
     "@react-email/render": "^1.2.3",
     "@tabler/icons-react": "^3.35.0",
+    "@tanstack/react-query": "^5.90.1",
+    "@tanstack/react-query-devtools": "^5.90.1",
     "@tanstack/react-table": "^8.21.3",
+    "axios": "^1.12.2",
     "better-auth": "^1.3.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -56,6 +60,7 @@
     "react-hook-form": "^7.63.0",
     "recharts": "2.15.4",
     "resend": "^6.1.0",
+    "slugify": "^1.6.6",
     "sonner": "^2.0.7",
     "tailwind-merge": "^3.3.1",
     "vaul": "^1.1.2",
