--- a/package.json
+++ b/package.json
@@ -45,6 +45,8 @@
     "@tanstack/react-query-devtools": "^5.90.1",
     "@tanstack/react-table": "^8.21.3",
     "axios": "^1.12.2",
+    "react-dropzone": "^14.3.8",
+    "cloudinary": "^2.7.0",
     "better-auth": "^1.3.13",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
