Update property management UI: refactor Home component to include EstateHeader, FilterSidebar, and EstatePropertyGrid for enhanced property browsing experience. Revise global styles in globals.css to introduce new design tokens and improve layout consistency. Modify package.json to specify migration name for Prisma. Update PropertyCard to display prices in Indian Rupees and adjust styling for better visual appeal.

--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "lint": "biome check",
     "format": "biome format --write",
     "db:generate": "prisma generate --no-engine",
-    "db:migrate": "prisma migrate dev",
+    "db:migrate": "prisma migrate dev --name init",
     "db:studio": "prisma studio",
     "db:push": "prisma db push"
   },
